--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <header>
     This is header.
   </header>
+
+  <main>
+      hi.
+      my name is beomjun.
+      hellow world!
+  </main>
+
   
 </body>
 </html>
