--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 </head>
 <body>
   <header>
-    This is header.
+    This is header. <!-- 작업되어 있던 코드 -->
   </header>
 
   <main>
       hi.
-      my name is beomjun.
-      hellow world!
+      my name is beomjun. <!-- pull로 땡겨온 코드 -->
+      hello world!
   </main>
 
   
   <footer>
-    This is footer
+    This is footer <!-- 작업한 코드 -->
   </footer>
 </body>
 </html>
