--- a/index.html
+++ b/index.html
@@ -7,20 +7,32 @@
 </head>
 <body>
   <header>
-    This is header. <!-- 작업되어 있던 코드 -->
+    This is header.
+
+    <nav>
+      <ul class="gnb">
+        <li>tab01</li>
+        <li>tab02</li>
+        <li>tab03</li>
+      </ul>
+    </nav>
   </header>
 
   <main>
       hi.
-      my name is beomjun. <!-- pull로 땡겨온 코드 -->
+      my name is beomjun.
       hello world!
       
       hahahahaha!
+
+      good day!
+      how are you.
   </main>
 
   
   <footer>
-    This is footer <!-- 작업한 코드 -->
+    This is footer
+    @copyright
   </footer>
 </body>
 </html>
